# checkpoint

./: .nfs00000000062f692000000030  .nfs000000000677a1a500000019  my_output.txt  ref_output.txt  test2.txt  test3.txt  test_input.txt
data/: my_input.txt
src/: autocomplete.cpp  meson.build
src/DictionaryTrie/: .DictionaryTrie.cpp.swp  .DictionaryTrie.hpp.swp  .meson.build.swp  DictionaryTrie.cpp  DictionaryTrie.hpp  meson.build
test/: .test_DictionaryTrie.cpp.swp  test_DictionaryTrie.cpp
